--- a/styles.css
+++ b/styles.css
@@ -31,3 +31,15 @@ body {
     transform: translate(-50%, -50%);
     border-radius: 50%;
   }
+.homebutton {
+  color: white;
+  padding: 10px 20px;
+  border-radius: 4px;
+  border-color: #46b8da;
+}
+
+#homebutton {
+  position: fixed;
+  bottom: -4px;
+  right: 10px;
+}
