--- a/styles.css
+++ b/styles.css
@@ -32,7 +32,7 @@ body {
     border-radius: 50%;
   }
 .homebutton {
-  color: white;
+  color: yellow;
   padding: 10px 20px;
   border-radius: 4px;
   border-color: #46b8da;
@@ -40,6 +40,6 @@ body {
 
 #homebutton {
   position: fixed;
-  bottom: -4px;
+  bottom: -3px;
   right: 10px;
 }
