--- a/styles.css
+++ b/styles.css
@@ -32,7 +32,7 @@ body {
     border-radius: 50%;
   }
 .homebutton {
-  color: yellow;
+  color: #46b8da;
   padding: 10px 20px;
   border-radius: 4px;
   border-color: #46b8da;
